# flofish

./: .gitignore  README.md  pyproject.toml
flofish/: __init__.py  experiment.py  image.py  utils.py  workflow.ipynb
flofish/scripts/: configure.ipynb
flofish/tests/: test_experiment.py  test_image.py
flofish/tests/data/exp16/: config.json
